# smart-contract-auditor

./: .dockerignore  .gitignore  README.md  action.yml  docker-compose.example.yml  docker-compose.yml  git_config_check.sh  requirements.txt
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  MANIFEST.in  README.md  api.py  chainaudit_entry.py  pyproject.toml  requirements.txt  setup.py
backend/contracts/: input.sol
backend/ml/: exploitability_model.joblib  predictor.py  train.py
backend/src/: cli.py  main.py  rules.py  scanner.py  solana_scanner.py
backend/src/chainaudit/: chain_registry.py  cli.py  evm_rules.py  evm_scanner.py  exploit_simulator.py  main.py  report_gen.py  rules.py  scanner.py  scanner_router.py  solana_rules.py  solana_scanner.py
backend/src/chainaudit/ml/: exploitability_model.joblib  predictor.py
backend/tests/: test_cli.py
contracts/: ReentrancyBank.sol
contracts/test/: 01_empty.sol  01_safe_vault.rs  02_high_risk.sol  02_high_risk_solana.rs  03_interface_only.sol  03_medium_risk_solana.rs  04_anchor_staking.rs  04_broken_syntax.sol  05_medium_risk.sol  06_low_risk.sol  ArbitrumVault.sol  CrossChainStaking.sol  OptimismBridge.sol
frontend/: .dockerignore  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: FindingCard.tsx  MultiScanResults.tsx  NavBar.tsx  RiskScore.tsx  ScanLoader.tsx  ScanResults.tsx  SeverityBadge.tsx  (+1 more)
src/: exploit_simulator.py  main.py  report_gen.py  rules.py  scanner.py
(+6 files in other folders)
