[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chainaudit"
version = "1.1.6"
description = "Smart contract security scanner for EVM and Solana"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "rich",
    "scikit-learn>=1.8.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0"
]

[project.scripts]
chainaudit = "chainaudit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["chainaudit*"]

[tool.setuptools.package-data]
"chainaudit.ml" = ["*.joblib"]